# cookiecutter_template_ds

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: initial_commit.py
{{cookiecutter.repo_name}}/: README.md  pyproject.toml
