[tool.poetry]
name = "cookiecutter-template-poetry"
version = "0.1.0"
description = ""
authors = ["Julio Torreblanca <julio.avila.torreblanca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.3"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
